# kaldi-native-fbank

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/scripts/: filter.py
cmake/: cmake_extension.py
kaldi-native-fbank/csrc/: feature-fbank.h  feature-raw-audio-samples.h  mel-computations.h  test-online-fbank.cc
kaldi-native-fbank/python/csrc/: feature-fbank.cc
kaldi-native-fbank/python/kaldi_native_fbank/: __init__.py  __init__.pyi
kaldi-native-fbank/python/tests/: test_fbank_options.py  test_feature_demo.py  test_feature_window_function.py  test_frame_extraction_options.py  test_istft.py  test_mel_bank.py  test_mel_bank_options.py  test_online_fbank.py  test_online_mfcc.py  test_online_raw_audio_samples.py  test_online_whisper_fbank.py  test_rfft.py  test_stft.py  test_vocos_istft.py
